<resources>
    <string name="app_name">KGEC_CAMPUS</string>
    <string name="username">Username</string>

    <string name="password1">Password</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo">logo</string>
    <string name="name">Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="email_address">Email Address</string>
    <string name="department">Department</string>
    <string name="password">Password</string>
    <string name="already_registered_log_in">Already Registered? Log in</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string-array name="semester">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>

    </string-array>
</resources>
