<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.kgec.home.kgec_campus.LoginActivity">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="268dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress|textFilter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="212dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="160dp"
        android:background="#0f08ab"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:targetApi="lollipop" />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:background="#0f08ab"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonForgotpassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonForgotpassword"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginBottom="40dp"
        android:background="#11000000"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Forgot Password?"
        tools:textStyle="italic" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="176dp"
        android:layout_height="146dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_logo" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"

        />


</android.support.constraint.ConstraintLayout>
